# warehouse_api

./: .env.example  Cargo.toml  README.md
docs/warehouse-api/: bruno.json  collection.bru  delete_item.bru  delete_location.bru  delete_warehouse.bru  get_healthcheck.bru  get_item_by_id.bru  get_items.bru  get_location_by_id.bru  get_locations.bru  get_warehouse_by_id.bru  get_warehouses.bru  post_item.bru  post_location.bru  post_pick_wave.bru  post_pick_wave_allocate.bru  post_pick_wave_confirm_pick.bru  post_receipt.bru  post_receipt_bulk.bru  post_transfer.bru  post_transfer_complete.bru  post_warehouse.bru  put_item.bru  put_location.bru  put_warehouse.bru  sample_receipt.csv
docs/warehouse-api/environments/: Local.bru
migration/: Cargo.toml  mod.rs
migration/src/: lib.rs  m20260115_214134_create_warehouse_table.rs  m20260116_083021_create_location_table.rs  m20260116_084312_create_item_table.rs  m20260116_085256_create_ledger_table.rs  m20260116_085306_create_transfer_table.rs  m20260116_085316_create_cycle_table.rs  m20260116_085326_create_pick_table.rs  m20260116_085335_create_reservation_table.rs
src/: config.rs  db.rs  error.rs  lib.rs  main.rs  server.rs
src/entities/: cycle.rs  cycle_count_line.rs  item.rs  ledger.rs  location.rs  mod.rs  pick.rs  pick_line.rs  reservation.rs  transfer.rs  transfer_line.rs  warehouse.rs
src/handlers/: health.rs  item.rs  location.rs  mod.rs  warehouse.rs
src/handlers/v1/: mod.rs
src/routes/: mod.rs
src/routes/v1/: health.rs  item.rs  location.rs  (+5 more)
src/services/: mod.rs
src/utils/: error.rs  validation.rs
(+34 files in other folders)
