[package]
name = "warehouse_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "catch-panic"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dotenvy = "0.15"
sea-orm = { version = "0.12", features = ["runtime-tokio-native-tls", "sqlx-postgres", "macros"] }
validator = { version = "0.18", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
csv = "1.3"
uuid = { version = "1.6", features = ["v4", "serde"] }